V3255-Q42 - Bug fix on Pipe TAGs

--- a/Prevu.Synoptics.V3255-2_Mazzuchelli/P200.xaml
+++ b/Prevu.Synoptics.V3255-2_Mazzuchelli/P200.xaml
@@ -9,7 +9,7 @@
              x:Class="Prevu.Synoptics.P200" mc:Ignorable="d" 
              Height="605" Width="1030" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas>
-    <Labels:Pipe Color="Water" Width="166" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="100-21-CV1" HorizontalAlignment="Center" Canvas.Left="302" Canvas.Top="475" VerticalAlignment="Top" PipeHeight="Medium">
+    <Labels:Pipe Color="Water" Width="166" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="200-21-CV1" HorizontalAlignment="Center" Canvas.Left="302" Canvas.Top="475" VerticalAlignment="Top" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -20,10 +20,10 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe 
-            StatusComponent="100-01-MA1" Canvas.Left="693" Canvas.Top="414" PipeHeight="Big" Width="252" HorizontalAlignment="Center" VerticalAlignment="Top" />
+            StatusComponent="200-01-MA1" Canvas.Left="693" Canvas.Top="414" PipeHeight="Big" Width="252" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:Pipe HorizontalAlignment="Left" 
                  VerticalAlignment="Top" 
-                 StatusComponent="100-71-ECS1" Canvas.Left="151" Canvas.Top="303" PipeHeight="Big" Width="315" />
+                 StatusComponent="200-71-ECS1" Canvas.Left="151" Canvas.Top="303" PipeHeight="Big" Width="315" Loaded="Pipe_Loaded" />
     <Grinders:CU_Cubedicer Canvas.Left="378" Canvas.Top="188" Height="405" Width="339" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
       <Grinders:CU_Cubedicer.RenderTransform>
         <TransformGroup>
