Drawings: aggiornamento immagini Rev.01.1

--- a/Prevu.Drawings/Machines/Release_01/Reactors/V01_STR_PrewashReactor.xaml
+++ b/Prevu.Drawings/Machines/Release_01/Reactors/V01_STR_PrewashReactor.xaml
@@ -48,7 +48,7 @@
                         </Path.Data>
                     </Path>
                 </Canvas>
-                <Path  Name="path14" StrokeThickness="2" Stroke="#FF292929" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
+                <Path  Name="path14" Effect="{StaticResource MaterialDesignElevationShadow1}" StrokeThickness="2" Stroke="#FF292929" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
                     <Path.Data>
                         <PathGeometry Figures="M22 23L43.5151 29.8989C43.9783 30.0474 43.9783 30.7026 43.5151 30.8511L23.4849 37.2739C23.0217 37.4224 23.0217 38.0776 23.4849 38.2261L43.5151 44.6489C43.9782 44.7974 43.9782 45.4526 43.5151 45.6011L23.4849 52.0239C23.0217 52.1724 23.0217 52.8276 23.4849 52.9761L43.5151 59.3989C43.9783 59.5474 43.9783 60.2026 43.5151 60.3511L23.4849 66.7739C23.0217 66.9224 23.0217 67.5776 23.4849 67.7261L43.5151 74.1489C43.9783 74.2974 43.9783 74.9526 43.5151 75.1011L22 82" FillRule="NonZero"/>
                     </Path.Data>
