--- a/Prevu.Drawings/Machines/Release_01/Trasporto/V01_SCW_Screw_wHopper.xaml
+++ b/Prevu.Drawings/Machines/Release_01/Trasporto/V01_SCW_Screw_wHopper.xaml
@@ -16,7 +16,7 @@
             </Canvas.Resources>
             <!--Unknown tag: sodipodi:namedview-->
             <Canvas Name="g14" >
-                <Path  Name="path2" Fill="#FF808080">
+                <Path  Name="path2" Fill="#FF808080" HorizontalAlignment="Center" Canvas.Top="0.166" VerticalAlignment="Center">
                     <Path.Data>
                         <PathGeometry Figures="M2 58V77C2 77.5523 2.44771 78 3 78H57.5L81.5 54H6C3.79086 54 2 55.7909 2 58Z" FillRule="NonZero"/>
                     </Path.Data>
