--- a/Prevu.Drawings/Machines/Release_01/General/V01_Material_Inlet-Outlet.xaml
+++ b/Prevu.Drawings/Machines/Release_01/General/V01_Material_Inlet-Outlet.xaml
@@ -16,7 +16,7 @@
             </Canvas.Resources>
             <!--Unknown tag: sodipodi:namedview-->
             <Canvas Name="g122" >
-                <Path  Name="path120" Fill="#FF808080">
+                <Path  Name="path120" Effect="{StaticResource MaterialDesignElevationShadow1}"  Fill="#FF808080">
                     <Path.Data>
                         <PathGeometry Figures="M31.3023 78H2.69767C1.76007 78 1 77.2399 1 76.3023V19.6977C1 18.7601 1.76007 18 2.69767 18H31.3023C32.2399 18 33 17.2399 33 16.3023V2.74772C33 1.1532 34.9994 0.438268 36.0104 1.67127L73.1173 46.9236C73.6305 47.5495 73.6305 48.4506 73.1173 49.0765L36.0104 94.3287C34.9994 95.5617 33 94.8468 33 93.2523V79.6977C33 78.7601 32.2399 78 31.3023 78Z" FillRule="NonZero"/>
                     </Path.Data>
