--- a/Prevu.Drawings/Machines/Release_01/Valves/V01_CV_Valve_wColor.xaml
+++ b/Prevu.Drawings/Machines/Release_01/Valves/V01_CV_Valve_wColor.xaml
@@ -16,12 +16,12 @@
             </Canvas.Resources>
             <!--Unknown tag: sodipodi:namedview-->
             <Canvas Name="g331" >
-                <Path  Name="path327" Fill="#FF8FD8FC">
+                <Path x:Name="ColorSide" Fill="#FF8FD8FC" Effect="{StaticResource MaterialDesignElevationShadow1}">
                     <Path.Data>
                         <PathGeometry Figures="M106.667 5.33333C106.667 4.59695 107.264 3.99569 107.999 4.0414C114.46 4.44326 120.589 7.75629 125.186 13.3726C130.098 19.3737 133.333 27.5131 133.333 36C133.333 44.4869 130.098 52.6262 125.186 58.6274C120.589 64.2437 114.46 67.5567 107.999 67.9586C107.264 68.0043 106.667 67.403 106.667 66.6667L106.667 36V5.33333Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path329" Fill="#FF808080">
+                <Path  Name="path329" Fill="#FF808080" Effect="{StaticResource MaterialDesignElevationShadow1}">
                     <Path.Data>
                         <PathGeometry Figures="M2.01933 3.87825C1.13063 3.34503 0 3.98518 0 5.02157V66.9784C0 68.0148 1.13063 68.6549 2.01933 68.1217L52.6473 37.7449C53.0696 37.4916 53.5971 37.4916 54.0193 37.7449L104.647 68.1217C105.536 68.6549 106.667 68.0148 106.667 66.9784V36V5.02158C106.667 3.98518 105.536 3.34503 104.647 3.87825L54.0193 34.2551C53.5971 34.5084 53.0696 34.5084 52.6473 34.2551L2.01933 3.87825Z" FillRule="NonZero"/>
                     </Path.Data>
