V2502: Update with new Drawings

--- a/Prevu.Synoptics.V2502_Polymer_Processor/D101.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/D101.xaml
@@ -10,7 +10,7 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="363" Width="479">
-        <Pits:PSP_Collecting_Pit_wAgitator Height="327" Canvas.Left="20" Canvas.Top="10" Width="433" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:V01_PSP_Pit_wAgitator Canvas.Left="36" Canvas.Top="18" Height="327" Width="433" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="320-61-LEV" SignalName="LSHA" Canvas.Left="226" Canvas.Top="130"/>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="320-61-LEV" SignalName="LSH" Canvas.Left="226" Canvas.Top="171" />
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="320-61-LEV" SignalName="LSL" Canvas.Left="226" Canvas.Top="259"/>
