--- a/Prevu.Synoptics.V2502_Polymer_Processor/D430.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/D430.xaml
@@ -10,7 +10,7 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="226" Width="829">
-        <Separation:VSP_DETAILPADDLES_SeparationTank_wMotorsAndScrew VerticalAlignment="Top" Height="205" Canvas.Left="10" Canvas.Top="10" Width="812" HorizontalAlignment="Center"/>
+        <Machines:V01_VSP_DETAIL_SepTank_w7Paddles_4Distributor Canvas.Left="10" Canvas.Top="10" Height="205" Width="812" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Top" 
 		ComponentName="430-01-MA1" Canvas.Left="6" Canvas.Top="84"/>
