--- a/Prevu.Synoptics.V2502_Polymer_Processor/D430_2.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/D430_2.xaml
@@ -10,7 +10,7 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="388"  Width="565">
-        <Separation:VSP_DETAILDISTRIBUTORS_SeparationTank_wMotorsAndScrew Height="368" Canvas.Left="10" Canvas.Top="10" Width="545" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_VSP_DETAIL_SepTank_w4Distributors Canvas.Left="10" Canvas.Top="50" Height="335" Width="545" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Top" 
 		ComponentName="430-02-MA1" Canvas.Left="78" Canvas.Top="29"/>
