--- a/Prevu.Synoptics.V2502_Polymer_Processor/P210.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P210.xaml
@@ -12,90 +12,45 @@
              x:Class="Prevu.Synoptics.P210" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-22-CV1" Canvas.Left="980" Canvas.Top="548" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Air" Width="100" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-24-CV1" Canvas.Left="1119" Canvas.Top="328" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Air" Width="82" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-24-CV1" Canvas.Left="1160" Canvas.Top="369" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="162" PipeHeight="Medium" StatusComponent="220-01-MA5" Height="30"  VisibilityComponent="220-24-CV1" VisibilitySignal="LS1" Canvas.Left="1183" Canvas.Top="271">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="76" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-22-CV1" Canvas.Left="981" Canvas.Top="547" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
                     <SkewTransform/>
-                    <RotateTransform Angle="0"/>
+                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="290" PipeHeight="Medium" StatusComponent="210-01-MA1" Height="30" Canvas.Left="655" Canvas.Top="251" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Air" Width="98" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-24-CV1" Canvas.Left="1120" Canvas.Top="328" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="80" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-21-CV1" Canvas.Left="458" Canvas.Top="367" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="558" Canvas.Top="500" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
                     <SkewTransform/>
                     <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="77" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="287-01-MA1" Canvas.Left="362" Canvas.Top="367" >
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Air" Width="75" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-24-CV1" Canvas.Left="1167" Canvas.Top="375" />
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="162" PipeHeight="Medium" StatusComponent="220-01-MA5" Height="30"  VisibilityComponent="220-24-CV1" VisibilitySignal="LS1" Canvas.Left="1183" Canvas.Top="271"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="290" PipeHeight="Medium" StatusComponent="210-01-MA1" Height="30" Canvas.Left="655" Canvas.Top="251" />
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="66" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-21-CV1" Canvas.Left="472" Canvas.Top="367" />
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="70" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="562" Canvas.Top="496" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
+                    <ScaleTransform/>
                     <SkewTransform/>
-                    <RotateTransform Angle="0"/>
+                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="558" Canvas.Top="568" VisibilityComponent="210-22-CV1" VisibilitySignal="LS1" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="77" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="287-01-MA1" Canvas.Left="362" Canvas.Top="367" />
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="72" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="561" Canvas.Top="567" VisibilityComponent="210-22-CV1" VisibilitySignal="LS1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
+                    <ScaleTransform/>
                     <SkewTransform/>
                     <RotateTransform Angle="90"/>
                     <TranslateTransform/>
@@ -105,102 +60,48 @@
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-23-CV1" Canvas.Left="558" Canvas.Top="638" VisibilityComponent="210-23-CV1" VisibilitySignal="LS1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
+                    <ScaleTransform/>
                     <SkewTransform/>
                     <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-22-CV1" Canvas.Left="980" Canvas.Top="616" VisibilityComponent="220-22-CV1" VisibilitySignal="LS1" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-23-CV1" Canvas.Left="980" Canvas.Top="686" VisibilityComponent="220-23-CV1" VisibilitySignal="LS1" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="422" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-71-ECS1" VisibilitySignal=""  VisibilityComponent="" HorizontalAlignment="Center" Canvas.Left="140" Canvas.Top="239" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="109" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="450-03-MA1" HorizontalAlignment="Center" Canvas.Left="444" Canvas.Top="310" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="369" PipeHeight="Medium" StatusComponent="210-71-ECS6" Height="30" HorizontalAlignment="Center" Canvas.Left="163" Canvas.Top="251" VerticalAlignment="Top">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="72" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-22-CV1" Canvas.Left="983" Canvas.Top="617" VisibilityComponent="220-22-CV1" VisibilitySignal="LS1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
                     <SkewTransform/>
-                    <RotateTransform Angle="0"/>
+                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="74" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-23-CV1" Canvas.Left="982" Canvas.Top="688" VisibilityComponent="220-23-CV1" VisibilitySignal="LS1" >
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Color="Water" Width="422" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-71-ECS1" VisibilitySignal=""  VisibilityComponent="" HorizontalAlignment="Center" Canvas.Left="140" Canvas.Top="239" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="109" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="450-03-MA1" HorizontalAlignment="Center" Canvas.Left="444" Canvas.Top="310" VerticalAlignment="Top"/>
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="369" PipeHeight="Medium" StatusComponent="210-71-ECS6" Height="30" HorizontalAlignment="Center" Canvas.Left="163" Canvas.Top="251" VerticalAlignment="Top"/>
         <Machines:Waste HorizontalAlignment="Center"  VerticalAlignment="Top" Height="60" Width="62" Canvas.Left="566" Canvas.Top="642"/>
         <Machines:Waste HorizontalAlignment="Center"  VerticalAlignment="Top" Height="60" Width="62" Canvas.Left="988" Canvas.Top="690"/>
-        <Separation:VSP_SeparationTank_wHopper HorizontalAlignment="Center" Width="314" Canvas.Left="892" Canvas.Top="242" VerticalAlignment="Top" Height="300" />
         <Machines:CV_Valve HorizontalAlignment="Center"  VerticalAlignment="Top" Height="38" Width="50" Canvas.Left="427" Canvas.Top="351"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Top" Color="Air" Height="68" Width="59" RenderTransformOrigin="0.5,0.5" Canvas.Left="1226" Canvas.Top="338" >
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="115" Canvas.Left="502" Canvas.Top="524"/>
-        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="115" Canvas.Left="502" Canvas.Top="594"/>
-        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="116" Canvas.Left="921" Canvas.Top="574"/>
-        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="116" Canvas.Left="921" Canvas.Top="643"/>
-        <Stirrer:STR_PrewashReactor_wScrew HorizontalAlignment="Center" Width="180" Canvas.Left="509" Canvas.Top="182" VerticalAlignment="Top" Height="302" />
-        <Machines:MaterialInletOutlet Width="106" Height="120" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" Canvas.Left="110" Canvas.Top="194" VerticalAlignment="Top">
-            <Machines:MaterialInletOutlet.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:MaterialInletOutlet.RenderTransform>
-        </Machines:MaterialInletOutlet>
-        <Rectangle Height="2" Stroke="Black" Width="92" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" Canvas.Left="188" Canvas.Top="233" VerticalAlignment="Top">
-            <d:Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </d:Rectangle.RenderTransform>
-        </Rectangle>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Color="Air" Height="68" Width="59" RenderTransformOrigin="0.5,0.5" Canvas.Left="1226" Canvas.Top="344" />
+        <Machines:V01_VSP_SepTank_wHopper Canvas.Left="899" Canvas.Top="242" Height="300" Width="314" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_STR_PrewashReactor Canvas.Left="509" Canvas.Top="182" Height="302" Width="180"/>
+        <Machines:V01_Material_Inlet_Outlet Canvas.Left="133" Canvas.Top="206"/>
+        <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="502" Canvas.Top="524" Height="22" Width="114" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="502" Canvas.Top="594" Height="22" Width="114" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="921" Canvas.Top="574" Height="22" Width="116" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="922" Canvas.Top="643" Height="22" Width="114" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Rectangle Height="102" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Canvas.Left="233" Canvas.Top="197" VerticalAlignment="Center"/>
         <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" Canvas.Left="204" Canvas.Top="141" VerticalAlignment="Top">
             <Machines:External.RenderTransform>
                 <TransformGroup>
@@ -264,5 +165,5 @@
             JumpFromLabel="210-21-CV1" 
             JumpToLabel="450-03-MA1" HorizontalAlignment="Center" Canvas.Left="389" Canvas.Top="277" VerticalAlignment="Top"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="220-VIEW" DetailsPageName="D220" HideComponentName="True" Canvas.Left="1012" Canvas.Top="181" />
-  </Canvas>
+    </Canvas>
 </UserControl>
