--- a/Prevu.Synoptics.V2502_Polymer_Processor/PlantView.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/PlantView.xaml
@@ -143,7 +143,6 @@
             </Machines:QX_LongElectricalCabinet.RenderTransform>
         </Machines:QX_LongElectricalCabinet>
         <Machines:QX_ShortElectricalCabinet Width="54" Height="64" Canvas.Left="263" Canvas.Top="682" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:GR_001 Height="166" Width="165" Canvas.Left="360" Canvas.Top="259" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:QX_HMI Height="82" Width="74" Canvas.Left="391" Canvas.Top="590" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="2037" Canvas.Top="161" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:QX_LongElectricalCabinet.RenderTransform>
@@ -165,7 +164,6 @@
                 </TransformGroup>
             </Machines:QX_LongElectricalCabinet.RenderTransform>
         </Machines:QX_LongElectricalCabinet>
-        <Separation:VSP_SeparationTank_wHopper Width="204" Canvas.Left="195" Canvas.Top="112" Height="192" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="1" Canvas.Top="325" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:QX_LongElectricalCabinet.RenderTransform>
                 <TransformGroup>
@@ -176,10 +174,6 @@
                 </TransformGroup>
             </Machines:QX_LongElectricalCabinet.RenderTransform>
         </Machines:QX_LongElectricalCabinet>
-        <Separation:VSP_SeparationTank_wMotorsAndScrew Width="294" Canvas.Left="699" Canvas.Top="423" HorizontalAlignment="Center" VerticalAlignment="Top" Height="199"/>
-        <Machines:FP_FiltroPressa_001 Height="129" Width="159" Canvas.Left="1090" Canvas.Top="250" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:FP_FiltroPressa_001 Height="128" Width="159" Canvas.Left="1090" Canvas.Top="415" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:FP_FiltroPressa_001 Height="129" Width="159" Canvas.Left="1090" Canvas.Top="576" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="1" Canvas.Top="685" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:QX_LongElectricalCabinet.RenderTransform>
                 <TransformGroup>
@@ -190,49 +184,19 @@
                 </TransformGroup>
             </Machines:QX_LongElectricalCabinet.RenderTransform>
         </Machines:QX_LongElectricalCabinet>
-        <Machines:DCE_DryingCentrifuge Height="140" Width="106" RenderTransformOrigin="0.5,0.5" Canvas.Left="1424" Canvas.Top="68" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:DCE_DryingCentrifuge.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DCE_DryingCentrifuge.RenderTransform>
-        </Machines:DCE_DryingCentrifuge>
         <Machines:DRY_HeatingBattery Width="66" Canvas.Top="237" Canvas.Left="1500" Height="64" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:DCE_DryingCentrifuge Height="140" Width="106" RenderTransformOrigin="0.5,0.5" Canvas.Left="1424" Canvas.Top="353" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:DCE_DryingCentrifuge.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DCE_DryingCentrifuge.RenderTransform>
-        </Machines:DCE_DryingCentrifuge>
         <Machines:DRY_HeatingBattery Width="66" Canvas.Top="522" Canvas.Left="1500" Height="64" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:DCE_DryingCentrifuge Height="140" Width="106" RenderTransformOrigin="0.5,0.5" Canvas.Left="1424" Canvas.Top="638" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:DCE_DryingCentrifuge.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DCE_DryingCentrifuge.RenderTransform>
-        </Machines:DCE_DryingCentrifuge>
         <Machines:DRY_HeatingBattery Width="66" Canvas.Top="807" Canvas.Left="1500" Height="64" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Belts:NT_NastroBuffer_wDrum Width="210" RenderTransformOrigin="0.5,0.5" Canvas.Left="1766" Canvas.Top="522" HorizontalAlignment="Center" VerticalAlignment="Top" Height="83">
-            <Belts:NT_NastroBuffer_wDrum.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform AngleY="-0.085"/>
-                    <RotateTransform/>
-                    <TranslateTransform Y="0.249"/>
-                </TransformGroup>
-            </Belts:NT_NastroBuffer_wDrum.RenderTransform>
-        </Belts:NT_NastroBuffer_wDrum>
+        <Machines:V01_VSP_SepTank_wHopper Canvas.Left="195" Canvas.Top="112" Height="192" Width="204" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_MU_Grinder Canvas.Left="360" Canvas.Top="259" Height="166" Width="165" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VSP_SepTank_w7Paddles_4Distributor Canvas.Left="699" Canvas.Top="423" Height="199" Width="294" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_FP_FiltroPressa_wFeederScrew Canvas.Left="1090" Canvas.Top="250" Height="129" Width="159" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_FP_FiltroPressa_wFeederScrew Canvas.Left="1090" Canvas.Top="414" Height="130" Width="159" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_FP_FiltroPressa_wFeederScrew Canvas.Left="1090" Canvas.Top="576" Height="130" Width="159" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_WCE_Centrifuge Canvas.Left="1400" Canvas.Top="93" Height="126" Width="149" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_WCE_Centrifuge Canvas.Left="1400" Canvas.Top="378" Height="126" Width="149" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_WCE_Centrifuge Canvas.Left="1400" Canvas.Top="663" Height="126" Width="149" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_NT_BufferBelt_wDrum Canvas.Left="1766" Canvas.Top="522" Height="83" Width="210" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="400"  Width="423" Canvas.Left="175" Canvas.Top="92" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="520"  Width="679" Canvas.Left="652" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="216"  Width="253" Canvas.Left="1750" Canvas.Top="431" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
@@ -264,6 +228,5 @@
         <Labels:GroupLabel GroupName="474" Canvas.Left="1232" Canvas.Top="406" Height="66" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="484" Canvas.Left="1232" Canvas.Top="566" Height="66" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="680" Canvas.Left="1899" Canvas.Top="440" Height="66" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:ValueLabel Canvas.Left="1793" Canvas.Top="537" TrendName="LEVEL" ComponentName="020-41-LT1" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
